muoni/GraalVM/language/tests/error/TypeError04.hn
fn main() {
  (1 > 2) or 4;
}  
