muoni/GraalVM/language/tests/error/TypeError04.output
Type error at TypeError04.hn line 2 col 3: operation "or" not defined for Boolean false, Number 4
